syntax = "proto3";

package org.iota.tangle.stream.messages;

message UnconfirmedTransactionMessage {
    string transactionHash = 1;
    string address = 2;
    string bundleHash = 3;
    string trunkHash = 4;
    string branchHash = 5;
    string obsoleteTag = 6;
    string tag = 7;
    int64 amount = 8;
    int64 timestampBundleCreation = 9;
    int64 timestampAttachment = 10;
    int32 indexInBundle = 11;
    int32 maxIndexInBundle = 12;
}

message InvalidTransactionMessage {
    string transactionHash = 1;
    string reason = 2;
}

message SolidMilestoneConfirmedTransactionMessage {
    string transactionHash = 1;
    string address = 2;
    string bundleHash = 3;
    string trunkHash = 4;
    string branchHash = 5;
    int32 milestoneIndex = 6;
}

message ConfirmedTransactionMessage {
    string address = 1;
    string transactionHash = 2;
    int32 milestoneIndex = 3;
}

message SimpleConfirmedTransactionMessage {
    string address = 1;
}

message MonteCarloWalkMessage {
    int32 count = 1;
}

message RawTransactionTrytes {
    string trytes = 1;
    string address = 2;
}